// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonText should not be uppercased on ios 1`] = `
<Text
  style={undefined}
>
  <Translation
    passThrough="Button text"
  />
</Text>
`;

exports[`ButtonText should uppercase text on android 1`] = `
<Text
  style={undefined}
>
  <Translation
    passThrough="Button text"
    textTransform="uppercase"
  />
</Text>
`;
